--- a/styles/views/speakers/xs.styl
+++ b/styles/views/speakers/xs.styl
@@ -4,7 +4,11 @@
     display inline-block
     margin-bottom 20px
     margin-right 20px
+    vertical-align top
     width 172px
+
+    .speaker-img
+      width 172px
 
     .speaker-label
       display block
@@ -13,3 +17,4 @@
       .speaker-title
         color #aaa
         display block
+        min-height 40px
